<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mahjoon</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="SplashView">启动界面</string>
    <string name="action_create">新建战局</string>
    <string name="action_history">历史战绩</string>
    <string name="mainButtonOk">确认</string>
    <string name="mainButtonCancel">取消</string>
    <string name="quarter">东场</string>
    <string name="half">半庄</string>
    <string name="complete">全庄</string>
    <string name="east">东家</string>
    <string name="west">西家</string>
    <string name="north">北家</string>
    <string name="south">南家</string>
    <string name="add">新增</string>
    <string name="finish">完成</string>
    <string name="save">保存</string>

</resources>
